[package]
name = "thumbor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
base64 = "0.13.0"
bytes = "1.2.1"
image = "0.24.4"
lazy_static = "1.4.0"
lru = "0.8.0"
percent-encoding = "2.2.0"
photon-rs = "0.3.1"
prost = "0.11.0"
reqwest = "0.11.12"
serde = "1.0.145"
tokio = { version = "1.21.2", features = ["full"] }
tower = "0.4.13"
tower-http = "0.3.4"
tracing = "0.1.36"
tracing-subscriber = "0.3.15"

[build-dependencies]
prost-build = "0.11.1" # 编译 protobuf
